[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://GDtitle.tres" type="Theme" id=2]
[ext_resource path="res://GDbutt.tres" type="Theme" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="In" type="ItemList" parent="."]
margin_left = 16.0
margin_top = 140.0
margin_right = 336.0
margin_bottom = 584.0
theme = ExtResource( 3 )

[node name="Out" type="ItemList" parent="."]
margin_left = 352.0
margin_top = 140.0
margin_right = 672.0
margin_bottom = 584.0
theme = ExtResource( 3 )

[node name="ExitBtn" type="Button" parent="."]
margin_left = 864.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 72.0
theme = ExtResource( 3 )
text = "Exit"

[node name="Add" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 72.0
theme = ExtResource( 3 )
text = "Add"

[node name="Remove" type="Button" parent="."]
margin_left = 176.0
margin_top = 16.0
margin_right = 320.0
margin_bottom = 72.0
theme = ExtResource( 3 )
text = "Remove"

[node name="lblIn" type="RichTextLabel" parent="."]
margin_left = 56.0
margin_top = 96.0
margin_right = 256.0
margin_bottom = 136.0
theme = ExtResource( 2 )
text = "check IN"

[node name="lblOut" type="RichTextLabel" parent="."]
margin_left = 392.0
margin_top = 96.0
margin_right = 624.0
margin_bottom = 136.0
theme = ExtResource( 2 )
text = "check OUT"

[node name="Visitors" type="ItemList" parent="."]
margin_left = 688.0
margin_top = 140.0
margin_right = 1008.0
margin_bottom = 584.0
theme = ExtResource( 3 )

[node name="VisLbl" type="RichTextLabel" parent="."]
margin_left = 704.0
margin_top = 96.0
margin_right = 896.0
margin_bottom = 136.0
theme = ExtResource( 2 )
text = "Visitors"

[connection signal="item_selected" from="In" to="." method="_on_In_item_selected"]
[connection signal="item_selected" from="Out" to="." method="_on_Out_item_selected"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="pressed" from="Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Remove" to="." method="_on_Remove_pressed"]
[connection signal="item_selected" from="Visitors" to="." method="_on_Visitors_item_selected"]
